--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <tag>fabric-sdk-java-1.0</tag>
     </scm>
     <properties>
-        <fabric.sdk.java.version>1.0.1</fabric.sdk.java.version>
+        <fabric.sdk.java.version>1.1.0-SNAPSHOT</fabric.sdk.java.version>
         <grpc.version>1.5.0</grpc.version><!-- CURRENT_GRPC_VERSION -->
         <bouncycastle.version>1.57</bouncycastle.version>
         <httpclient.version>4.5.3</httpclient.version>
